[gd_scene load_steps=21 format=3 uid="uid://eiucawkuafne"]

[ext_resource type="Script" path="res://scenes/game_object/meta_wizard_enemy/meta_wizard_enemy.gd" id="1_88ato"]
[ext_resource type="PackedScene" uid="uid://1eb4c2a8e7v0" path="res://scenes/component/health_component.tscn" id="2_hj4px"]
[ext_resource type="PackedScene" uid="uid://b5oac738l0tm8" path="res://scenes/game_object/bullet/bullet.tscn" id="2_jd7af"]
[ext_resource type="PackedScene" uid="uid://cp8vnkqe3a3id" path="res://scenes/component/death_component.tscn" id="3_dcr8r"]
[ext_resource type="PackedScene" uid="uid://bb1n4fv217n0r" path="res://scenes/component/velocity_component.tscn" id="4_4m77g"]
[ext_resource type="PackedScene" uid="uid://n1auteb125hu" path="res://scenes/component/vial_drop_component.tscn" id="5_48qpj"]
[ext_resource type="PackedScene" uid="uid://cwj5a1t2d4jlq" path="res://scenes/component/hit_flash_component.tscn" id="6_1kv61"]
[ext_resource type="PackedScene" uid="uid://cbq5u5mv12hvn" path="res://scenes/component/hurtbox_component.tscn" id="7_fhsen"]
[ext_resource type="Texture2D" uid="uid://bdxrepi7goljn" path="res://scenes/game_object/meta_wizard_enemy/tile_0084.png" id="8_k86fh"]
[ext_resource type="Texture2D" uid="uid://buumfu66npbp2" path="res://scenes/game_object/meta_wizard_enemy/tile_0130.png" id="9_p2jlb"]

[sub_resource type="Animation" id="Animation_o5kvq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ihjh3"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(1.49012e-08, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.174533]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.45, 0.7),
"transitions": PackedFloat32Array(1, 3.36358, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.2), Vector2(1.2, 0.9)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.05, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_is_moving"
}, {
"args": [false],
"method": &"set_is_moving"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jts7g"]
_data = {
"RESET": SubResource("Animation_o5kvq"),
"walk": SubResource("Animation_ihjh3")
}

[sub_resource type="Animation" id="Animation_2niit"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Wand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, -11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Wand:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.806281, 0.806281)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Wand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lmsg2"]
resource_name = "shoot"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Wand:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(11, -8), Vector2(7, -7), Vector2(8, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Wand:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.806281, 0.806281)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Wand:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, 0.488692, 0.993449]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hii8u"]
_data = {
"RESET": SubResource("Animation_2niit"),
"shoot": SubResource("Animation_lmsg2")
}

[sub_resource type="Shader" id="Shader_ennkl"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform float lerp_percent : hint_range(0.0, 1.0);

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	vec4 texture_color = texture(TEXTURE,UV);
	vec4 final_color = mix(texture_color,vec4(1.0,1.0,1.0,texture_color.a),lerp_percent);
	COLOR = final_color;
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y3t8h"]
resource_local_to_scene = true
shader = SubResource("Shader_ennkl")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gby1h"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jvvl8"]
radius = 4.0

[node name="MetaWizardEnemy" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(129, 88)
collision_layer = 8
collision_mask = 9
script = ExtResource("1_88ato")
bullet = ExtResource("2_jd7af")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jts7g")
}
autoplay = "walk"

[node name="WandAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hii8u")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_hj4px")]
max_health = 200.0

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("3_dcr8r")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="VelocityComponent" parent="." instance=ExtResource("4_4m77g")]
max_speed = 60
acceleration = 10.0

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("helath_component") instance=ExtResource("5_48qpj")]
drop_perenct = 0.7
helath_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_1kv61")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_y3t8h")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_fhsen")]
visible = false
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_gby1h")

[node name="Visuals" type="Node2D" parent="."]

[node name="Wand" type="Sprite2D" parent="Visuals"]
position = Vector2(11, -11)
scale = Vector2(0.806281, 0.806281)
texture = ExtResource("9_p2jlb")

[node name="Marker2D" type="Marker2D" parent="Visuals/Wand"]
position = Vector2(0, -8.68184)

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("8_k86fh")
offset = Vector2(0, -8)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_jvvl8")

[node name="Timer" type="Timer" parent="."]
one_shot = true
